Fix issue with banner image on smaller resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,8 @@ img {
     position: absolute;
     width: 100%;
     height: 284px;
-    background: url(../images/banner/banner_full.png);
-    background-position: center;
+    background: url(../images/banner/banner_full.png) right 160%;
+    background-position: right 45% bottom 0%;
     background-repeat: no-repeat;
     z-index: -1;
 }
